group 'com.fliaping.proxy.h2'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'idea'
idea {
    module {
        inheritOutputDirs = true
    }
}
sourceCompatibility = 1.9

repositories {
    mavenCentral()
}

dependencies {
    compile 'io.netty:netty-all:4.1.16.Final'
    compile 'com.google.protobuf:protobuf-java:3.5.1'
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

jar {
    manifest {
        attributes 'Main-Class': 'local.ProxyLocal'
    }
}

def java_home = rootProject.ext.java9_home //System.getenv('JAVA_HOME')
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'local', '--launcher', 'local=local/local.ProxyLocal', '--output', 'dist', '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages'
}